codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__side_context_label_shows_parent_status.snap
---
source: tui/src/chatwidget/tests/side.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────┐│CONTEXT LEDGER  Total ≈0 tokens"
"› Check recently modified functions for compati││admitted                       "
"└──────────────────────────────────────────────┘│                               "
"  Side from main thread · main needs input · Ctr│No portable context is         "
"                                                │available.                     "
" Elpis · model gpt-5.6-sol · location /tmp/proje│ACTIVE FILES  ≈0 tokens        "
