codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_fast_mode_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"┌──────────────────────────────────────────────┐│CONTEXT LEDGER  Total ≈0 tokens"
"› Ask Codex to do anything                     ││admitted                       "
"└──────────────────────────────────────────────┘│                               "
"        100% context left · Tab Context Ledger  │No portable context is         "
"                                                │available.                     "
" Elpis · model gpt-5.6-sol · location /tmp/proje│ACTIVE FILES  ≈0 tokens        "
