codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_model_with_reasoning_plan_mode_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"┌──────────────────────────────────────────────┐│CONTEXT LEDGER  Total ≈0 tokens"
"› Ask Codex to do anything                     ││admitted                       "
"└──────────────────────────────────────────────┘│                               "
"  Plan mode (shift+tab to cycle)                │No portable context is         "
"                                                │available.                     "
" Elpis · model gpt-5.2 · location /tmp/project  │ACTIVE FILES  ≈0 tokens        "
