codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_setup_popup_rate_limits.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: status_line_popup_snapshot(&mut chat)
---
                                                            │CONTEXT LEDGER  Total ≈0 tokens
  Configure Status Line                                     │admitted
  Select which items to display in the status line.         │
                                                            │No portable context is available.
  Type to search                                            │ACTIVE FILES  ≈0 tokens admitted
  >                                                         │No sources available.
› [x] Use theme colors      Apply colors from the active …  │
  ───────────────────────                                   │DURABLE MEMORY  ≈0 tokens admitted
  [x] monthly-limit         Remaining usage on the monthl…  │No sources available.
  [x] weekly-limit          Remaining usage on the weekly…  │
  [ ] model                 Current model name              │INSTRUCTIONS  ≈0 tokens admitted
  [ ] model-with-reasoning  Current model name with reaso…  │No sources available.
  [ ] reasoning             Current reasoning level         │
  [ ] current-dir           Current working directory       │TOOL EVIDENCE  ≈0 tokens admitted

  ELPIS · provider openai · model gpt-5.6-sol · context 0…
  Press space to toggle; ←/→ to move; enter to confirm and c

 Elpis · model gpt-5.6-sol · location /tmp/project
