codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_widget_and_approval_modal.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"┌──────────────────────────────────────────────────────────┐│CONTEXT LEDGER  Total ≈0 tokens        "
"│ Would you like to run the following command?             ││admitted                               "
"│                                                          ││                                       "
"│ Reason: this is a test reason such as one that would be  ││No portable context is available.      "
"│ produced by the model                                    ││ACTIVE FILES  ≈0 tokens admitted       "
"│                                                          ││No sources available.                  "
"│ $ echo 'hello world'                                     ││                                       "
"│                                                          ││DURABLE MEMORY  ≈0 tokens admitted     "
"› 1. Yes, proceed (y)                                      ││No sources available.                  "
"  2. Yes, and don't ask again for commands that start with ││                                       "
"     `echo 'hello world'` (p)                              ││INSTRUCTIONS  ≈0 tokens admitted       "
"  3. No, and tell Codex what to do differently (esc)       ││No sources available.                  "
"└──────────────────────────────────────────────────────────┘│                                       "
"  Press enter to confirm or esc to cancel                   │TOOL EVIDENCE  ≈0 tokens admitted      "
"                                                                                                    "
" Elpis · model gpt-5.6-sol · location /tmp/project                                                  "
